--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,29 @@
-*.iml
-.gradle
-/local.properties
-/.idea/workspace.xml
-/.idea/libraries
+#built application files
+*.apk
+*.ap_
+
+# files for the dex VM
+*.dex
+
+# Java class files
+*.class
+
+# generated files
+bin/
+gen/
+
+# Local configuration file (sdk path, etc)
+local.properties
+
+# Windows thumbnail db
+Thumbs.db
+
+# OSX files
 .DS_Store
-/build
-/captures
+
+# Android Studio
+# https://www.jetbrains.com/idea/help/project.html
+*.iml
+.idea/workspace.xml
+.gradle
+build/
