--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,25 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="app.donation">
+<manifest package="app.donation"
+          xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <application
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme"
-        android:name="app.donation.DonationApp">
-        <activity
-            android:name="app.donation.Donate"
-            android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name="app.donation.Report"
-            android:label="@string/donateTitle" >
-        </activity>
-    </application>
+  <uses-permission android:name="android.permission.INTERNET"/>
+
+  <application
+      android:name=".main.DonationApp"
+      android:allowBackup="true"
+      android:icon="@mipmap/ic_launcher"
+      android:label="@string/app_name"
+      android:theme="@style/AppTheme">
+    <activity
+        android:name=".activity.Welcome"
+        android:label="@string/app_name">
+      <intent-filter>
+        <action android:name="android.intent.action.MAIN"/>
+        <category android:name="android.intent.category.LAUNCHER"/>
+      </intent-filter>
+    </activity>
+    <activity
+        android:name=".activity.Donate"
+        android:label="@string/app_name">
+    </activity>
+    <activity
+        android:name=".activity.Report"
+        android:label="@string/app_name">
+    </activity>
+    <activity
+        android:name=".activity.Signup"
+        android:label="@string/app_name">
+    </activity>
+    <activity
+        android:name=".activity.Login"
+        android:label="@string/title_activity_login">
+    </activity>
+  </application>
 
 </manifest>
